--- a/views/person/index2.ejs
+++ b/views/person/index2.ejs
@@ -57,9 +57,9 @@
 				<label for="gender">Gender</label>
 				<select class="form-control" id="gender" name="gender">
 					<option value="0">Select</option>
-                    <% personGender.enums.forEach(function(enumItem) { %>
-                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                    <% }); %>
+                <% for (var i = 1; i <= personGender.length; i += 1) { %>
+					<option value="<%= personGender[i - 1] %>"><%= personGender[i - 1] %></option>
+                <% } %>
 				</select>
 			</div>
 		</div>
@@ -74,9 +74,9 @@
 				<label for="personrole">Role</label>
 				<select class="form-control" id="personrole" name="personrole">
 					<option value="0">Select</option>
-                    <% userRole.enums.forEach(function(enumItem) { %>
-                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                    <% }); %>
+                <% for (var i = 1; i <= userRole.length; i += 1) { %>
+					<option value="<%= userRole[i - 1] %>"><%= userRole[i - 1] %></option>
+                <% } %>
 				</select>
 			</div>
 		</div>
@@ -85,9 +85,9 @@
 				<label for="persontype">Type</label>
 				<select class="form-control" id="persontype" name="persontype">
 					<option value="0">Select</option>
-                    <% personType.enums.forEach(function(enumItem) { %>
-                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                    <% }); %>
+                <% for (var i = 1; i <= personType.length; i += 1) { %>
+					<option value="<%= personType[i - 1] %>"><%= personType[i - 1] %></option>
+                <% } %>
 				</select>
 			</div>
 		</div>
@@ -96,9 +96,9 @@
 				<label for="personrolestatus">Role Status</label>
 				<select class="form-control" id="personrolestatus" name="personrolestatus">
 					<option value="0">Select</option>
-                    <% userRoleStatus.enums.forEach(function(enumItem) { %>
-                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                    <% }); %>
+                <% for (var i = 1; i <= userRoleStatus.length; i += 1) { %>
+					<option value="<%= userRoleStatus[i - 1] %>"><%= userRoleStatus[i - 1] %></option>
+                <% } %>
 				</select>
 			</div>
 		</div>
@@ -107,9 +107,9 @@
 				<label for="religion">Religion</label>
 				<select class="form-control" id="religion" name="religion">
 					<option value="0">Select</option>
-                    <% personReligion.enums.forEach(function(enumItem) { %>
-                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                    <% }); %>
+                <% for (var i = 1; i <= personReligion.length; i += 1) { %>
+					<option value="<%= personReligion[i - 1] %>"><%= personReligion[i - 1] %></option>
+                <% } %>
 				</select>
 			</div>
 		</div>
@@ -157,9 +157,9 @@
 							<label for="contactphonetype">Type</label>
 							<select class="form-control" id="contactphonetype" name="contactphonetype">
 								<option value="0" selected>Select</option>
-                            <% contactPhoneType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactPhoneType.length; i += 1) { %>
+					            <option value="<%= contactPhoneType[i - 1] %>"><%= contactPhoneType[i - 1] %></option>
+                            <% } %>
 							</select>
 						</div>
 					</div>
@@ -253,9 +253,9 @@
 						<label for="contactemailtype">Type</label>
 						<select class="form-control" id="contactemailtype" name="contactemailtype">
 							<option value="0" selected>Select</option>
-                            <% contactEmailType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactEmailType.length; i += 1) { %>
+					            <option value="<%= contactEmailType[i - 1] %>"><%= contactEmailType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -344,9 +344,9 @@
 						<label for="contactfaxtype">Type</label>
 						<select class="form-control" id="contactfaxtype" name="contactfaxtype">
 							<option value="0" selected>Select</option>
-                            <% contactFaxType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactFaxType.length; i += 1) { %>
+					            <option value="<%= contactFaxType[i - 1] %>"><%= contactFaxType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -437,9 +437,9 @@
 						<label for="contactmediatype">Type</label>
 						<select class="form-control" id="contactmediatype" name="contactmediatype">
 							<option value="0" selected>Select</option>
-                            <% contactMediaType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactMediaType.length; i += 1) { %>
+					            <option value="<%= contactMediaType[i - 1] %>"><%= contactMediaType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -524,9 +524,9 @@
 						<label for="contactaddresstype">Type</label>
 						<select class="form-control" id="contactaddresstype" name="contactaddresstype">
 							<option value="0" selected>Select</option>
-                            <% contactAddressType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactAddressType.length; i += 1) { %>
+					            <option value="<%= contactAddressType[i - 1] %>"><%= contactAddressType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -574,9 +574,9 @@
 						<label for="contactstatecode">State Code</label>
 						<select class="form-control" id="contactstatecode" name="contactstatecode">
 							<option value="0" selected>Select</option>
-                            <% contactStateCode.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactStateCode.length; i += 1) { %>
+					            <option value="<%= contactStateCode[i - 1] %>"><%= contactStateCode[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -585,9 +585,9 @@
 						<label for="contactcountrycode">Country Code</label>
 						<select class="form-control" id="contactcountrycode" name="contactcountrycode">
 							<option value="0" selected>Select</option>
-                            <% contactCountryCode.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactCountryCode.length; i += 1) { %>
+					            <option value="<%= contactCountryCode[i - 1] %>"><%= contactCountryCode[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -686,9 +686,9 @@
 						<label for="identificationtype">Type</label>
 						<select class="form-control requiredfield" id="identificationtype" name="identificationtype">
 							<option value="0" selected>Select</option>
-                            <% identificationType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= identificationType.length; i += 1) { %>
+					            <option value="<%= identificationType[i - 1] %>"><%= identificationType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -715,9 +715,9 @@
 						<label for="identificationstatus">Status</label>
 						<select class="form-control" id="identificationstatus" name="identificationstatus">
 							<option value="0" selected>Select</option>
-                            <% identificationStatus.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= identificationStatus.length; i += 1) { %>
+					            <option value="<%= identificationStatus[i - 1] %>"><%= identificationStatus[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -830,9 +830,9 @@
 						<label for="personcontacttype">Contact Type</label>
 						<select class="form-control requiredfield" id="personcontacttype" name="personcontacttype">
 							<option value="0" selected>Select</option>
-                            <% contactType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactType.length; i += 1) { %>
+					            <option value="<%= contactType[i - 1] %>"><%= contactType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -841,9 +841,9 @@
 						<label for="personrelationshiptype">Relationship Type</label>
 						<select class="form-control" id="personrelationshiptype" name="personrelationshiptype">
 							<option value="0" selected>Select</option>
-                            <% personPersonRelationship.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= personPersonRelationship.length; i += 1) { %>
+					            <option value="<%= personPersonRelationship[i - 1] %>"><%= personPersonRelationship[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -1076,9 +1076,9 @@
 						<label for="personorgcontacttype">Contact Type</label>
 						<select class="form-control requiredfield" id="personorgcontacttype" name="personorgcontacttype">
 							<option value="0" selected>Select</option>
-                            <% contactType.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= contactType.length; i += 1) { %>
+					            <option value="<%= contactType[i - 1] %>"><%= contactType[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
@@ -1087,9 +1087,9 @@
 						<label for="personorgrelationshiptype">Relationship Type</label>
 						<select class="form-control" id="personorgrelationshiptype" name="personorgrelationshiptype">
 							<option value="0" selected>Select</option>
-                            <% personOrganizationRelationship.enums.forEach(function(enumItem) { %>
-                            <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
-                            <% }); %>
+                            <% for (var i = 1; i <= personOrganizationRelationship.length; i += 1) { %>
+					            <option value="<%= personOrganizationRelationship[i - 1] %>"><%= personOrganizationRelationship[i - 1] %></option>
+                            <% } %>
 						</select>
 					</div>
 				</div>
